<resources>
    <string name="app_name">DrawApp</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Closed Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">331143401562950</string>
    <string name="fb_login_protocol_scheme">fb331143401562950</string>
    <string name="user_name">user name</string>
    <string name="brush">brush</string>
    <string name="erase">erase</string>
    <string name="save">save</string>
    <string name="rotation">rotation</string>
    <string name="welcome_to_drawapp">Welcome to DrawApp</string>
    <string name="drawing_is_an_art">Drawing is an Art.</string>
    <string name="user_email">user email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="re_send">RE-SEND</string>
    <string name="let_s_login">LET\'S LOGIN</string>
    <string name="a_link_sent_to_your_email_please_verify_your_email">A Link sent to your email ...please verify your email</string>
    <string name="register">Register</string>
    <string name="create_password">create password</string>
    <string name="register_on_drawapp">Register on DrawApp</string>
    <string name="reset_password">Reset password</string>
    <string name="an_link_have_sent_to_your_email_please_go_there_and_reset_your_password">An link have sent to your email ..please go there and reset your password.:)</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="color">color</string>
    <string name="useremail_gmail_com">useremail@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="paintings">Paintings</string>
    <string name="my_paintings">My paintings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
</resources>