<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="New"
            android:icon="@drawable/ic_new"
            android:id="@+id/nav_new"/>
        <item android:title="@string/settings"
            android:icon="@drawable/ic_setting"
            android:id="@+id/nav_setting"/>
        <item android:title="@string/logout"
            android:icon="@drawable/ic_logout"
            android:id="@+id/nav_logout"/>
    </group>
    <item android:title="@string/paintings"
        >
        <menu>
            <item android:title="@string/my_paintings"
                android:icon="@drawable/ic_my_paintings"
                android:id="@+id/nav_my_paintings"/>
            <item android:title="@string/paintings"
                android:icon="@drawable/ic_all_paintings"
                android:id="@+id/nav_all_paintings"/>
        </menu>

    </item>

</menu>