<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        tools:context="authantication.UserRegisterActivity">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/back"/>
        <TextView
            android:id="@+id/tv_register_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_back"
            android:text="@string/register_on_drawapp"
            android:textColor="@color/text_dark"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_register_line"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:hint= "@string/user_name"
            android:background="@drawable/box_layout"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"/>
        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/et_user_name"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:hint= "@string/user_email"
            android:background="@drawable/box_layout"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"/>
        <EditText
            android:id="@+id/et_user_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_user_email"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:hint= "@string/create_password"
            android:textSize="20sp"
            android:background="@drawable/box_layout"
            android:padding="8dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_user_password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textSize="25sp"
            android:textStyle="bold" />
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/resend_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_register"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/tv_verify_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_link_sent_to_your_email_please_verify_your_email"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="userRegistration"
                    android:text="@string/re_send"
                    android:layout_marginEnd="15dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_go_to_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/button_background"
                    android:onClick="userRegistration"
                    android:text="@string/let_s_login"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
