<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:paddingBottom="180dp"
        tools:context=".UserLoginActivity">
        <TextView
            android:id="@+id/tv_welcome_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_drawapp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_dark"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/box_layout"
            android:padding="5dp"
            android:layout_below="@+id/tv_welcome_line"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:hint= "@string/user_email"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"/>
        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/box_layout"
            android:layout_below="@+id/et_user_email"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:hint= "@string/password"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_dark"
            android:text="@string/forgot_password"
            android:onClick="resetPassword"
            android:layout_below="@id/et_user_password"
            android:gravity="end"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/login"
            android:onClick="userLogin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_forgot_password"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
            android:layout_marginStart="50dp"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:id="@+id/facebook_layout"
            android:padding="10dp"
            android:layout_below="@+id/btn_login"
            android:layout_width="match_parent"
            android:onClick="facebookLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_background"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_facebook"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/facebook"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_facebook"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:text="@string/facebook"
                android:textSize="18sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/google_layout"
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_below="@+id/facebook_layout"
            android:layout_centerHorizontal="true"
            android:onClick="googleLogin"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_google"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/google"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_google"
                android:layout_marginStart="5dp"
                android:text="@string/google"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/new_account_layout"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_below="@+id/google_layout"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_not_have_account"
                android:text="@string/don_t_have_an_account"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/register_now"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:onClick="goToRegister"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textColor="@color/text_dark"
                android:layout_toEndOf="@+id/tv_not_have_account"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
