<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"
            >
            <LinearLayout
                android:id="@+id/icon_linera_layout"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:visibility="gone"

                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/btn_brush"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brush"
                    android:contentDescription="@string/brush"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/border"
                    android:layout_marginStart="10dp"
                    />
                <ImageButton
                    android:id="@+id/btn_erase"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/eraser"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/erase"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="10dp"
                    />
                <ImageButton
                    android:id="@+id/btn_save"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_save"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/save"
                    />
                <ImageButton
                    android:id="@+id/btn_rotation"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_rotation"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/rotation"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"/>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        />
</androidx.drawerlayout.widget.DrawerLayout>